マイページでのお気に入り一覧取得機能のSwaggerスキーマを追加する
